# MyRender

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/: stb_image.cpp
include/glad/: glad.h
src/: Image.h  Shader.h
